fix: change MLV list container to scroll on overflow

--- a/root/frontend/src/index.css
+++ b/root/frontend/src/index.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  height: 101%;
+  height: 100%;
 }
 
 body > #root {
